Backend/k8s/fabricantes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabricantes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fabricantes
  template:
    metadata:
      labels:
        app: fabricantes
    spec:
      containers:
      - name: fabricantes
        image: gcr.io/miso-ccp-backend/fabricantes:latest
        ports:
          - containerPort: 3001
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: fabricantes
spec:
  selector:
    app: fabricantes
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
