Backend/k8s/inventarios-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventarios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventarios
  template:
    metadata:
      labels:
        app: inventarios
    spec:
      containers:
      - name: inventarios
        image: gcr.io/miso-ccp-backend/inventarios:latest
        ports:
          - containerPort: 3003
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: inventarios
spec:
  selector:
    app: inventarios
  ports:
    - port: 3003
      targetPort: 3003
  type: ClusterIP
