Backend/k8s/ventas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ventas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ventas
  template:
    metadata:
      labels:
        app: ventas
    spec:
      containers:
      - name: ventas
        image: gcr.io/miso-ccp-backend/ventas:latest
        ports:
          - containerPort: 3002
        readinessProbe:
            httpGet:
              path: /ventas/ping
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
        livenessProbe:
            httpGet:
              path: /ventas/ping
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 5
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ventas
spec:
  selector:
    app: ventas
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
