Backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: ""
spec:
  rules:
  - http:
      paths:
      - path: /usuarios
        pathType: Prefix
        backend:
          service:
            name: usuarios
            port:
              number: 3000
      - path: /fabricantes
        pathType: Prefix
        backend:
          service:
            name: fabricantes
            port:
              number: 3001
      - path: /ventas
        pathType: Prefix
        backend:
          service:
            name: ventas
            port:
              number: 3002
      - path: /inventarios
        pathType: Prefix
        backend:
          service:
            name: inventarios
            port:
              number: 3003
